deployments/pathweb/workloads/home-network/socat-serial-zb01/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: socat-serial-zb01
  namespace: home-network
spec:
  ports:
  - port: 20108
    targetPort: 20108
    name: tcp
    protocol: TCP
  selector:
    app.kubernetes.io/name: socat-serial-zb01
